Fix button alignment on older safari

--- a/src/components/MediaLibrary/MediaLibrary.css
+++ b/src/components/MediaLibrary/MediaLibrary.css
@@ -101,7 +101,7 @@
 
   & .nc-mediaLibrary-close {
     @apply(--dropShadowMiddle);
-    display: flex;
+
     position: absolute;
     margin-right: -40px;
     left: -40px;
@@ -111,13 +111,14 @@
     border-radius: 50%;
     background-color: white;
     padding: 0;
-    justify-content: center;
-    align-items: center;
 
     & .nc-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
       position: relative;
-      left: 1px;
-      top: 1px;
     }
   }
 }
@@ -147,8 +148,10 @@
 
   & .nc-icon {
     position: absolute;
+    top: 50%;
     left: 6px;
     z-index: 2;
+    transform: translate(0, -50%);
   }
 }
 
